ingress.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginxctl
spec:
  tls:
    - secretName: example-com-tls
      hosts:
        - example.com
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port: 
                  number: 80
            path: /
            pathType: ImplementationSpecific
